RESOLVED FIXED51260
Assertion failure with <select multiple required>
https://bugs.webkit.org/show_bug.cgi?id=51260
Summary Assertion failure with <select multiple required>
Kent Tamura
Reported 2010-12-17 08:52:43 PST
1. Open the attached HTML 2. Select either of options in the listbox - The :invalid style should be cleared, but :invalid is still applied. 3. click outside of the listbox Assertion failure occurs: ASSERTION FAILED: m_isValid == validity()->valid() (/Users/kent/WebKit/WebCore/html/HTMLFormControlElement.cpp:343 virtual bool WebCore::HTMLFormControlElement::isValidFormControlElement())
Attachments
reproducing HTML (137 bytes, text/html)
2010-12-17 08:53 PST, Kent Tamura
no flags
Patch (4.71 KB, patch)
2010-12-21 22:05 PST, Dai Mikurube
no flags
Patch (4.68 KB, patch)
2010-12-21 22:52 PST, Dai Mikurube
commit-queue: commit-queue-
Kent Tamura
Comment 1 2010-12-17 08:53:38 PST
Created attachment 76885 [details] reproducing HTML
Dai Mikurube
Comment 3 2010-12-21 22:05:52 PST
Kent Tamura
Comment 4 2010-12-21 22:11:09 PST
Comment on attachment 77188 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=77188&action=review > WebCore/ChangeLog:6 > + https://bugs.webkit.org/show_bug.cgi?id=51260 > + Assertion failure with <select multiple required> nit: We usually write a summary and a bug URL in this order.
Kent Tamura
Comment 5 2010-12-21 22:29:12 PST
Comment on attachment 77188 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=77188&action=review > LayoutTests/fast/css/pseudo-valid-select-click.html:1 > +<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN"> Can you merge this test into fast/forms/select-live-pseudo-selectors.html?
Dai Mikurube
Comment 6 2010-12-21 22:52:10 PST
Dai Mikurube
Comment 7 2010-12-21 22:52:35 PST
(In reply to comment #5) Ok, merged.
Kent Tamura
Comment 8 2010-12-21 22:54:27 PST
Comment on attachment 77191 [details] Patch ok
WebKit Commit Bot
Comment 9 2010-12-22 00:38:00 PST
Comment on attachment 77191 [details] Patch Clearing flags on attachment: 77191 Committed r74466: <http://trac.webkit.org/changeset/74466>
WebKit Commit Bot
Comment 10 2010-12-22 00:38:08 PST
Comment on attachment 77191 [details] Patch Rejecting attachment 77191 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'land-attachment', '--force-clean', '--ignore-builders', '--non-interactive', '--parent-command=commit-queue', 77191]" exit_code: 1 Last 500 characters of output: ebkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_html.py", line 546, in __getattr__ self.forms() File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_html.py", line 559, in forms self._forms_factory.forms()) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_html.py", line 228, in forms raise ParseError(exc) webkitpy.thirdparty.autoinstalled.mechanize._html.ParseError Full output: http://queues.webkit.org/results/7316102
Dai Mikurube
Comment 11 2010-12-26 21:37:56 PST
(In reply to comment #10) Does anyone know the current status? The patch looks committed into the tree, and it can be built correctly despite this error in applying the patch.
Alexey Proskuryakov
Comment 12 2010-12-26 21:50:10 PST
Looks like commit queue failed to close the bug.
Adam Barth
Comment 13 2010-12-26 21:55:15 PST
(In reply to comment #12) > Looks like commit queue failed to close the bug. Strange. We should look at the logs to see what happened.
Dai Mikurube
Comment 14 2010-12-26 22:01:04 PST
(In reply to comment #13) Alexey, Adam, Thank you for handling it. In addition, a similar error happened in the bug 51289.
Eric Seidel (no email)
Comment 15 2010-12-26 22:35:29 PST
Sound like bug 33659.
Note You need to log in before you can comment on or make changes to this bug.