2010-12-22  Dai Mikurube  <dmikurube@google.com>

Reviewed by Kent Tamura.

        Assertion failure with <select multiple required>
        https://bugs.webkit.org/show_bug.cgi?id=51260

        * fast/forms/resources/select-live-pseudo-selectors.js:
        * fast/forms/select-live-pseudo-selectors-expected.txt:
2010-12-22  Dai Mikurube  <dmikurube@google.com>

        Reviewed by Kent Tamura.

        Assertion failure with <select multiple required>
        https://bugs.webkit.org/show_bug.cgi?id=51260

        Test: fast/css/pseudo-valid-select-click.html

        * dom/SelectElement.cpp: updateValidity() after selecting some options of ListBox-typed <select> elements to update valid() cache.
        (WebCore::SelectElement::updateListBoxSelection):

Canonical link: https://commits.webkit.org/64808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74466 268f45cc-cd09-0410-ab3c-d52691b4dbfc